
#add_subdirectory(adc)
#add_subdirectory(adxl372_test)
#add_subdirectory(ajoystick)
#add_subdirectory(alarm)
#add_subdirectory(apa102)
#add_subdirectory(apds9960)
#add_subdirectory(bastest)
#add_subdirectory(bmp180)
#add_subdirectory(bridge)
#add_subdirectory(buttons)
#add_subdirectory(calib_udelay)
#add_subdirectory(can)
#add_subdirectory(canard)
#add_subdirectory(cctype)
#add_subdirectory(chat)
#add_subdirectory(configdata)
#add_subdirectory(cpuhog)
#add_subdirectory(cromfs)
#add_subdirectory(cxxtest)
#add_subdirectory(dac)
add_subdirectory(dhcpd)
#add_subdirectory(dhtxx)
add_subdirectory(discover)
#add_subdiectory(djoystick)
add_subdirectory(dsptest)
add_subdirectory(elf)
#add_subdirectory(fb)
#add_subdirectory(fboverlay)
#add_subdirectory(flash_test)
#add_subdirectory(flowc)
#add_subdirectory(fstest)
#add_subdirectory(ft80x)
#add_subdirectory(ftpc)
#add_subdirectory(ftpd)
#add_subdirectory(gpio)
#add_subdirectory(gps)
add_subdirectory(hello)
#add_subdirectory(helloxx)
#add_subdirectory(hidkbd)
#add_subdirectory(i2schar)
#add_subdirectory(i2sloop)
#add_subdirectory(igmp)
#add_subdirectory(ina219)
#add_subdirectory(ina226)
#add_subdirectory(ipforward)
#add_subdirectory(json)
#add_subdirectory(leds)
#add_subdirectory(lis3dsh_reader)
#add_subdirectory(lsm330spi_test)
#add_subdirectory(lvgldemo)
#add_subdirectory(max31855)
#add_subdirectory(media)
#add_subdirectory(mld)
#add_subdirectory(mlx90614)
#add_subdirectory(mm)
#add_subdirectory(modbus)
#add_subdirectory(module)
#add_subdirectory(mount)
#add_subdirectory(mtdpart)
#add_subdirectory(mtdrwb)
#add_subdirectory(netloop)
#add_subdirectory(netpkt)
#add_subdirectory(nettest)
#add_subdirectory(nrf24l01_term)
#add_subdirectory(null)
#add_subdirectory(nunchuck)
#add_subdirectory(nx)
#add_subdirectory(nxdemo)
#add_subdirectory(nxffs)
#add_subdirectory(nxflat)
#add_subdirectory(nxhello)
#add_subdirectory(nximage)
add_subdirectory(nxlines)
#add_subdirectory(nxterm)
#add_subdirectory(nxtext)
#add_subdirectory(obd2)
#add_subdirectory(oneshot)
#add_subdirectory(ostest)
#add_subdirectory(pashello)
#add_subdirectory(pca9635)
#add_subdirectory(pdcurses)
#add_subdirectory(pf_ieee802154)
#add_subdirectory(pipe)
#add_subdirectory(poll)
#add_subdirectory(popen)
add_subdirectory(posix_spawn)
#add_subdirectory(powerled)
#add_subdirectory(powermonitor)
#add_subdirectory(pppd)
#add_subdirectory(pty_test)
#add_subdirectory(pwm)
#add_subdirectory(qencoder)
#add_subdirectory(random)
#add_subdirectory(relays)
#add_subdirectory(rfid_readuid)
add_subdirectory(rgbled)
#add_subdirectory(romfs)
#add_subdirectory(sendmail)
#add_subdirectory(serialblaster)
#add_subdirectory(serialrx)
#add_subdirectory(serloop)
#add_subdirectory(slcd)
#add_subdirectory(smart)
#add_subdirectory(smart_test)
#add_subdirectory(smp)
#add_subdirectory(smps)
#add_subdirectory(sotest)
#add_subdirectory(stat)
#add_subdirectory(system)
#add_subdirectory(tcpblaster)
#add_subdirectory(tcpecho)
add_subdirectory(telnetd)
#add_subdirectory(thttpd)
#add_subdirectory(tiff)
#add_subdirectory(timer)
#add_subdirectory(touchscreen)
#add_subdirectory(udgram)
#add_subdirectory(udp)
#add_subdirectory(udpblaster)
#add_subdirectory(unionfs)
add_subdirectory(usbserial)
#add_subdirectory(userfs)
#add_subdirectory(usrsocktest)
#add_subdirectory(ustream)
#add_subdirectory(veml6070)
#add_subdirectory(watchdog)
#add_subdirectory(webserver)
add_subdirectory(wget)
#add_subdirectory(wgetjson)
#add_subdirectory(xbc_test)
#add_subdirectory(xmlrpc)
#add_subdirectory(zerocross)
