
#add_subdirectory(chat)
#add_subdirectory(codecs)
add_subdirectory(dhcpc)
add_subdirectory(dhcpd)
add_subdirectory(discover)
#add_subdirectory(esp8266)
#add_subdirectory(ftpc)
#add_subdirectory(ftpd)
#add_subdirectory(json)
add_subdirectory(netlib)
#add_subdirectory(ntpclient)
#add_subdirectory(ping)
#add_subdirectory(pppd)
#add_subdirectory(smtp)
add_subdirectory(telnetc)
add_subdirectory(telnetd)
add_subdirectory(tftpc)
#add_subdirectory(thttpd)
add_subdirectory(webclient)
#add_subdirectory(webserver)
#add_subdirectory(xmlrpc)
