
#add_subdirectory(cdcacm)
add_subdirectory(cle)
add_subdirectory(composite)
#add_subdirectory(critmon)
#add_subdirectory(cu)
#add_subdirectory(dhcpc)
#add_subdirectory(embedlog)
#add_subdirectory(flash_eraseall)
#add_subdirectory(hex2bin)
#add_subdirectory(hexed)
#add_subdirectory(i2c)
#add_subdirectory(lm75)
#add_subdirectory(lzf)
#add_subdirectory(mdio)
add_subdirectory(netdb)
add_subdirectory(nsh)
#add_subdirectory(ntpc)
#add_subdirectory(nxplayer)
#add_subdirectory(nxrecorder)
#add_subdirectory(ping)
#add_subdirectory(ping6)
#add_subdirectory(popen)
#add_subdirectory(prun)
#add_subdirectory(ramtest)
add_subdirectory(readline)
#add_subdirectory(sched_note)
#add_subdirectory(setlogmask)
#add_subdirectory(stackmonitor)
#add_subdirectory(sudoku)
#add_subdirectory(symtab)
#add_subdirectory(system)
#add_subdirectory(taskset)
#add_subdirectory(tee)
#add_subdirectory(telnet)
#add_subdirectory(ubloxmodem)
add_subdirectory(usbmsc)
#add_subdirectory(vi)
#add_subdirectory(zmodem)
